5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1671_1880.log
== TEST (2019-04-28 17:26:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input("numero de mes invalido")
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:28:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input("numero de mes invalido")
if(x==1)
 print("Mes: Janeiro")
-- ERROR:
File "XXXX", line 3
    if(x==1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:28:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input("numero de mes invalido")
if(x=="1")
 print("Mes: Janeiro")
-- ERROR:
File "XXXX", line 3
    if(x=="1")
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:28:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input("numero de mes invalido")
if(x=="1"):
  print("Mes: Janeiro")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x=="1"):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:29:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input("numero de mes invalido")
if(x=="1"):
  print("Mes: Janeiro")
-- EXECUTION TIME:
0.166317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1880/main.py", line 3, in <module>
    if(x=="1"):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:29:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input("numero de mes invalido")
if(x=="1"):
  print("Mes: Janeiro")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x=="1"):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:35:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input(int("numero de mes invalido"))
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3")
   print("Mes: Marco")
elif(x==4)
   print("Mes: Abril")
elif(x==5)
	print("Mes: Maio")
elif(x==6)
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
-- ERROR:
File "XXXX", line 7
    elif(x=="3")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:36:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
input(int("numero de mes invalido"))
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(int("numero de mes invalido"))
ValueError: invalid literal for int() with base 10: 'numero de mes invalido'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:36:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int("numero de mes invalido"))
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
-- ERROR:
File "XXXX", line 2
    x= int("numero de mes invalido"))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:36:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int("numero de mes invalido"))
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
-- EXECUTION TIME:
0.143833
-- ERROR:
  File "/home/codebench/codes/1671/1880/main.py", line 2
    x= int("numero de mes invalido"))
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:37:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x="Mes"
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
-- EXECUTION TIME:
0.146201
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:37:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x="Mes"
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
-- ERROR:
File "XXXX", line 2
    x= int("numero de mes invalido"))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:38:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(int(1<=m<=12))
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
	
-- EXECUTION TIME:
0.203805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1880/main.py", line 2, in <module>
    x= float(int(1<=m<=12))
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:38:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= float(int(1<=m<=12))
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= float(int(1<=m<=12))
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:39:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(1<=m<=12)
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
	
-- EXECUTION TIME:
0.190641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1880/main.py", line 2, in <module>
    x= int(1<=m<=12)
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:39:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(1<=m<=12)
if(x=="1"):
	print("Mes: Janeiro")
elif(x=="2"):
	print("Mes: Fevereiro")
elif(x=="3"):
   print("Mes: Marco")
elif(x==4):
   print("Mes: Abril")
elif(x==5):
	print("Mes: Maio")
elif(x==6):
   print("Mes: Junho")
elif(x==7):
	print("Mes: Julho")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x= int(1<=m<=12)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
